feat: added item service and chest items (#27, #16) (#30)